--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ display: flex;
 flex-direction: row;
 color:white;
 text-align: center;
-width: 80%;
+width: 75%;
 margin: 0 auto;
 height: 50vh;
 }
@@ -228,6 +228,13 @@ display: flex;
 flex-direction: column;
 justify-content:space-around;
 align-items: left;
+margin-left: 25px;
+}
+
+.items{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
 }
 }
 
